--- a/Todo Project/Todo Project.csproj
+++ b/Todo Project/Todo Project.csproj
@@ -60,7 +60,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="AddUserCommand.cs" />
+    <Compile Include="RelayCommand.cs" />
     <Compile Include="User.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
