--- a/Todo Project/Todo Project.csproj
+++ b/Todo Project/Todo Project.csproj
@@ -61,7 +61,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="RelayCommand.cs" />
-    <Compile Include="User.cs" />
+    <Compile Include="Item.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
